--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Título da página</title>
+        <title>Fanpage de Gatinhos</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Aqui vai um título</h1>
+        <h1>Perfil #catsoninstagram título</h1>
+        <img src="imagens/gatinho.jpeg" />
     </body>
     </html>
